<resources>
    <string name="app_name">Final_Project_Drunk</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="last_name_input" />
    <string name="first_name_input" />
    <string name="email_field_input" />
    <string name="user_name">User Name</string>
    <string name="user_name_input" />
    <string name="password_field">Password</string>
    <string name="password_input" />
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="button">Submit</string>
    <string name="min_drinks">Are you expecting 1 to 3 alcoholic beverages?</string>
    <string name="med_drinks">Are you expecting 4 to 6 alcoholic beverages?</string>
    <string name="large_drinks">Are you expecting 7 to 10 alcoholic beverages?</string>
    <string name="extra_drinks">Are you drinking 11 to 15 alcoholic beverages?</string>
    <string name="max_drinks">Are you drinking 15+ alcoholic beverages?</string>
    <string name="button_login">Login</string>
    <string name="user_name_login">UserName:</string>
    <string name="password_login">Password:</string>
    <string name="drink_responsibly">Please remember to drink responsibly.</string>
    <string name="lock_contacts_question">Would you like to select contacts to lock?</string>
    <string name="_yes">Yes</string>
    <string name="_no">No</string>
    <string name="record_outing_question">Record your outing in drunk log?</string>
    <string name="log_form_title">Drunk Settings Log Form</string>
    <string name="location">Location:</string>
    <string name="arrival_time">Arrival Time:</string>
    <string name="who_with_you">Who\'s with you?</string>
    <string name="submit">Submit</string>
    <string name="solve_math">Please solve this math problem to continue unlocking your contacts.</string>
    <string name="math_problem_string"># + # + #</string>
    <string name="submit_unlock_attempt">Submit Unlock Attempt</string>
    <string name="contacts_item">Contacts</string>
    <string name="contact_page">Would you like to see your contacts?</string>
    <string name="max_drinks_message">Woah, that\'s a lot of drinks. Make sure you have your belongings in a safe place and look before crossing streets.</string>
    <string name="contacts_unlock_btn">UNLOCK CONTACTS</string>
    <string name="sign_out_btn">SIGN OUT</string>
    <string name="btn_show_location">Show Location</string>
    <string name="new_log">NEW DRUNK LOG</string>
    <string name="button_continue">Continue</string>
    <string name="_time">Time:</string>
    <string name="whos_with_you">With you:</string>
</resources>
