<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ff08d3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/log_form_title"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/arrival_time"
        android:id="@+id/textView5"
        android:textSize="17sp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/form_location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/who_with_you"
        android:id="@+id/textView6"
        android:paddingLeft="15dp"
        android:textSize="17sp"
        android:layout_below="@+id/form_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/form_location"
        android:layout_alignTop="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/form_time"
        android:inputType="time"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignRight="@+id/form_people"
        android:layout_alignEnd="@+id/form_people"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/form_people"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/form_submit"
        android:layout_marginBottom="44dp"
        android:textSize="20sp"
        android:background="#407aff"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>