<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearFormView">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/SingleFormView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/location_scroll"
            android:text="@string/location"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/_time"
            android:id="@+id/time_scroll"
            android:layout_below="@+id/location_scroll"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/whos_with_you"
            android:id="@+id/with_you_scroll"
            android:minLines="1"
            android:layout_below="@+id/time_scroll"
            android:textSize="14sp"
            android:layout_toStartOf="@+id/time_scrollview"
            android:layout_toLeftOf="@+id/time_scrollview" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_scrollview"
            android:layout_toRightOf="@+id/location_scroll"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/time_scroll"
            android:inputType="none" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/time_scrollview"
            android:layout_toRightOf="@+id/location_scroll"
            android:layout_toEndOf="@+id/location_scroll"
            android:layout_alignTop="@+id/time_scroll"
            android:layout_above="@+id/with_you_scroll" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/with_you_scrollview"
            android:layout_alignTop="@+id/with_you_scroll"
            android:layout_alignLeft="@+id/time_scrollview"
            android:layout_alignStart="@+id/time_scrollview"
            android:layout_alignRight="@+id/time_scrollview"
            android:layout_alignEnd="@+id/time_scrollview"
            android:layout_alignBottom="@+id/with_you_scroll"
            android:inputType="none" />

    </RelativeLayout>
</LinearLayout>
</RelativeLayout>